--- a/config.json
+++ b/config.json
@@ -1,36 +1,28 @@
 {
   "public": {
     "default": {
-      "commerce-core-endpoint": "https://www.aemshop.net/graphql",
-      "commerce-endpoint": "https://www.aemshop.net/cs-graphql",
+      "commerce-core-endpoint": "https://na1-sandbox.api.commerce.adobe.com/vanilla/graphql",
+      "commerce-endpoint": "https://na1-sandbox.api.commerce.adobe.com/vanilla/graphql",
       "headers": {
         "all": {
-          "Store": "default"
-        },
-        "cs": {
-          "Magento-Customer-Group": "b6589fc6ab0dc82cf12099d1c2d40ab994e8410c",
-          "Magento-Store-Code": "main_website_store",
-          "Magento-Store-View-Code": "default",
-          "Magento-Website-Code": "base",
-          "x-api-key": "4dfa19c9fe6f4cccade55cc5b3da94f7",
-          "Magento-Environment-Id": "f38a0de0-764b-41fa-bd2c-5bc2f3c7b39a"
+          "x-api-key": "f75115a1f5c64e61a50e050543da9545"
         }
       },
       "analytics": {
         "base-currency-code": "USD",
-        "environment": "Production",
+        "environment": "Sandbox",
         "store-id": 1,
-        "store-name": "Main Website Store",
-        "store-url": "https://www.aemshop.net",
+        "store-name": "Vanilla Sandbox Store",
+        "store-url": "https://na1-sandbox.api.commerce.adobe.com",
         "store-view-id": 1,
         "store-view-name": "Default Store View",
         "website-id": 1,
-        "website-name": "Main Website"
+        "website-name": "Vanilla Sandbox Website"
       },
       "plugins": {
         "picker": {
-           "rootCategory": "2"
-         }
+          "rootCategory": "2"
+        }
       }
     }
   }
